Tribute to Berger

--- a/JQuery/index.html
+++ b/JQuery/index.html
@@ -1,11 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 
+<style>
+body {
+  background-color: lightgrey;
+}
+
+.titre {
+  padding: 50px 50px 0px 50px;
+  font-size: 100px;
+  font-weight: bold;
+  font-family: Lobster;
+  text-align: center;
+}
+
+.sous-titre {
+  padding: 20px;
+  font-size: 30px;
+  font-family: Lobster;
+  text-align: center;
+}
+
+.mon-image {
+  padding: 20px 200px 20px 200px;
+}
+
+img {
+  border-radius:50%;
+}
+
+.lien{
+  text-align: center;
+}
+
+.albums {
+  background-color: darkgrey;
+  border-color: black;
+  border-width: 5px;
+  border-style: solid;
+  border-radius:15px;
+  margin: 10px 150px 10px 150px;
+  padding: 10px;
+  font-size: 30px;
+  font-family: Lobster;
+  text-align: center;
+}
+
+ul {
+  padding: 30px;
+  font-size: 20px;
+  font-family: Lobster;
+  text-align: left;
+}
+</style>
 
   <body>
 
-JQuery examples ... coming soon !!!
+<div class="container-fluid">
+<div class="titre">Michel Berger</div>
+<div class="sous-titre">Pianiste, auteur-compositeur-interprète, directeur artistique et arrangeur musical français
+</div>
+  <div class="mon-image">
+    <figure>
+<img class="img-responsive" src="http://resize3-parismatch.ladmedia.fr/img/var/news/storage/images/paris-match/people/michel-berger-un-hommage-pour-les-25-ans-de-sa-mort-1318625/21889367-1-fre-FR/Michel-Berger-un-hommage-pour-les-25-ans-de-sa-mort.jpg" title="Michel Berger"></img>
+     <figcaption style="text-align: center;">Michel Berger lors d'un concert à Paris</figcaption>
+</figure>
+</div>
+<div class="albums">Liste de ses différents albums 
+<ul>
+  Albums studio :
+  <br>
+  <br>
+  <li>1971 : Puzzle (EMI)</li>
+  <li>1973 : Michel Berger (Warner Music)</li>
+  <li>1974 : Chansons pour une fan (Warner Music)</li>
+  <li>1975 : Que l'amour est bizarre (Warner Music)</li>
+  <li>1976 : Mon piano danse (Warner Music)</li>
+  <li>1980 : Beauséjour (Warner Music)</li>
+  <li>1981 : Beaurivage (Warner Music)</li>
+  <li>1982 : Dreams In Stone (Warner Music)</li>
+  <li>1983 : Voyou (Warner Music)</li>
+  <li>1985 : Différences (Warner Music)</li>
+  <li>1990 : Ça ne tient pas debout (Warner Music)</li>
+  <li>1992 : Double Jeu (avec France Gall) (Warner Music)</li>
+</ul>
+
+
+<ul>
+  Albums live :
+  <br>
+    <br>
+  <li>1980 : Michel Berger au Théâtre des Champs-Élysées</li>
+  <li>1983 : Michel Berger en public au Palais des Sports</li>
+  <li>1986 : Michel Berger au Zénith</li>
+</ul>
+</div>
+
+<div class="lien">Pour plus d'informations, <a href="https://fr.wikipedia.org/wiki/Michel_Berger">visitez la page wikipedia qui lui est dédiée.</a>
+</div>
+
+<div class="lien" style="padding: 50px 0px 0px 0px;">Written and coded by <a href="https://wbecker64.github.io/">William Becker</a>.</div>
+
+</div>
 
   </body>
 
