Update Index.html of Berger
Change wbecker target

--- a/Berger/index.html
+++ b/Berger/index.html
@@ -102,7 +102,7 @@ ul {
 <div class="lien">Pour plus d'informations, <a href="https://fr.wikipedia.org/wiki/Michel_Berger">visitez la page wikipedia qui lui est dédiée.</a>
 </div>
 
-<div class="lien" style="padding: 50px 0px 0px 0px;">Written and coded by <a href="https://wbecker64.github.io/">William Becker</a>.</div>
+<div class="lien" style="padding: 50px 0px 0px 0px;">Written and coded by <a href="https://codepen.io/wbecker64/">William Becker</a>.</div>
 
 </div>
 
